fix/margins-and-spacing

--- a/private/student/styles/list-denunciation.styles.css
+++ b/private/student/styles/list-denunciation.styles.css
@@ -2,12 +2,14 @@
 @media (min-width: 1300px) {
     .card-contact {
         width: 480px;
+
     }
 }
 
 @media (max-width: 1225px) {
     .card-contact {
         width: 350px;
+
     }
 }
 
@@ -32,4 +34,16 @@
     max-width: 100%;
     word-wrap: break-word;
     word-break: break-all;
+}
+
+.my-card-contact{
+    width: 500px;
+    border-radius: 10px;
+    border: 1px solid var(--gray7);
+    margin: 30px;
+    padding: 20px;
+}
+
+.responsive-spacing {
+    margin-bottom: 25px;
 }
